# lumen

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  cloudbuild.yaml
.github/workflows/: deploy.yml
backend/: Dockerfile  entrypoint.sh  lumen.db  pyproject.toml  seed.py
backend/app/: config.py  database.py  main.py
backend/app/api/: buildings.py  insurers.py  pipeline.py  reviews.py
backend/app/models/: __init__.py  building.py  evidence_item.py  insurer.py  review.py  snapshot.py
backend/app/pipeline/: change_detect.py  companies_house.py  geocode.py  licensing.py  orchestrator.py  places.py  scoring.py  street_view.py  vision.py
backend/app/schemas/: __init__.py  building.py  evidence.py  insurer.py  pipeline.py  review.py  snapshot.py
backend/app/services/: building_service.py  pipeline_service.py
backend/docs/diagrams/: 01-system-architecture.md  02-pipeline-flow.md  03-sequence-diagram.md  04-agent-architecture.md  05-scoring-algorithm.md  README.md
backend/lumen_agents/: __init__.py  orchestrator.py  requirements.txt
backend/lumen_agents/agents/: __init__.py  change_detection.py  companies_house.py  crime.py  food_hygiene.py  geocode.py  licensing.py  places.py  review_sentiment.py  scoring.py  street_view.py  vision.py
backend/lumen_agents/core/: __init__.py  types.py
backend/lumen_agents/tests/: demo_real_pipeline.py  test_agents.py  test_companies_house.py  test_integration.py  test_orchestrator.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  (+5 more)
(+14 files in other folders)
